--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -1,6 +1,6 @@
 name: GitHub Organization User Activity Report
 description: Generates a summary of user activity for an organization
-author: Peter Murray
+author: Zoli Bharmal
 
 inputs:
   token:
