--- a/.github/workflows/long-time.yml
+++ b/.github/workflows/long-time.yml
@@ -17,8 +17,8 @@ jobs:
         id: analyze_org
         uses: ./
         with:
-          token: ${{ secrets.OCTODEMO_TOKEN }}
-          organization: octodemo
+          token: ${{ secrets.GITHUB_TOKEN }}
+          organization: zolibh
           activity_days: 680
           octokit_max_retries: 3
           
