--- a/.github/workflows/long-time.yml
+++ b/.github/workflows/long-time.yml
@@ -17,7 +17,7 @@ jobs:
         id: analyze_org
         uses: ./
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITUSER_TOKEN }}
           organization: zolibh
           activity_days: 680
           octokit_max_retries: 3
