--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -18,7 +18,7 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.GITUSER_TOKEN }}
-          organization: zolibh
+          organization: LBHackney-IT
 #           activity_days: 7
           
 #       - name: Validate Outputs
